k8s-deploy/httpserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver-service
  namespace: httpserver
spec:
  selector:
    app: httpserver
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
