k8s-deploy/httpserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver-ingress
  namespace: httpserver
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: httpserver-service
      port:
        number: 8080
  rules:
    - host: httpserver.wangqi.love
      http:
        paths:
          - backend:
              service:
                name: httpserver-service
                port:
                  number: 80
            path: /
            pathType: Prefix
